crates/loxia-tui/src/snapshots/loxia_tui__style__tests__theme_snapshot_per_theme@amber_crt.snap
---
source: crates/loxia-tui/src/style.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 28, height: 6 },
    content: [
        "┌──────────────────────────┐",
        "│Alpha                     │",
        "│Beta                      │",
        "│Gamma                     │",
        "└──────────────────────────┘",
        "██████████████ ██           ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 207, 64), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(255, 176, 0), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Rgb(255, 207, 64), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(10, 5, 0), bg: Rgb(255, 176, 0), underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Rgb(255, 207, 64), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(255, 176, 0), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Rgb(255, 207, 64), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(255, 176, 0), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Rgb(10, 5, 0), bg: Rgb(255, 176, 0), underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Rgb(255, 176, 0), bg: Rgb(10, 5, 0), underline: Reset, modifier: NONE,
    ]
}
