crates/loxia-tui/src/snapshots/loxia_tui__style__tests__theme_snapshot_per_theme@cyberpunk_neon.snap
---
source: crates/loxia-tui/src/style.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 28, height: 6 },
    content: [
        "┌──────────────────────────┐",
        "│Alpha                     │",
        "│Beta                      │",
        "│Gamma                     │",
        "└──────────────────────────┘",
        "██████████████ ██           ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 46, 136), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(230, 230, 250), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Rgb(255, 46, 136), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(0, 240, 255), bg: Rgb(58, 13, 77), underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Rgb(255, 46, 136), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(230, 230, 250), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Rgb(255, 46, 136), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(0, 240, 255), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Rgb(10, 0, 20), bg: Rgb(0, 240, 255), underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Rgb(0, 240, 255), bg: Rgb(10, 0, 20), underline: Reset, modifier: NONE,
    ]
}
