crates/loxia-tui/src/snapshots/loxia_tui__style__tests__theme_snapshot_per_theme@darcula.snap
---
source: crates/loxia-tui/src/style.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 28, height: 6 },
    content: [
        "┌──────────────────────────┐",
        "│Alpha                     │",
        "│Beta                      │",
        "│Gamma                     │",
        "└──────────────────────────┘",
        "██████████████ ██           ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(204, 120, 50), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(169, 183, 198), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Rgb(204, 120, 50), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(255, 255, 255), bg: Rgb(33, 66, 131), underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Rgb(204, 120, 50), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(169, 183, 198), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Rgb(204, 120, 50), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(104, 151, 187), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Rgb(43, 43, 43), bg: Rgb(104, 151, 187), underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Rgb(104, 151, 187), bg: Rgb(43, 43, 43), underline: Reset, modifier: NONE,
    ]
}
